Fix for unwrapping blockquote
Unwrapping a blockquote with simple TextNode (e.g. <blockquote>Hello</blockquote>), caused a Lexical error 99:  "Only element or decorator nodes can be inserted in to the root node"

This change wraps all TextNodes in a paragraph when unwrapping a blockquote.

--- a/app/assets/stylesheets/lexxy-content.css
+++ b/app/assets/stylesheets/lexxy-content.css
@@ -64,6 +64,10 @@
     font-style: italic;
     margin: var(--lexxy-content-margin) 0;
     padding: 0.5lh 2ch;
+
+    p:last-child {
+      margin-block-end: 0;
+    }
   }
 
   p:empty {
